# clipcart

./: .gitignore  gemini_ops.py  main.py  mongo_utils.py  pyproject.toml
AiTasks/: ai_task.py  generate_recipe_task.py
ai_tasks/: ai_task.py  extract_recipe_details_task.py  generate_recipe_task.py
custom_scrapers/: __init__.py  custom_scraper.py  wprm_scraper.py
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx  types.ts
frontend/src/components/RecipePanel/: FilterPanel.tsx  RecipeCard.tsx  RecipeDetail.tsx  RecipeList.tsx  RecipePanel.css  RecipePanel.tsx  types.ts
frontend/src/components/ShoppingListPanel/: GenerateListModal.tsx  ShoppingListCard.tsx  ShoppingListDetail.tsx  ShoppingListPanel.css  ShoppingListPanel.tsx  useShoppingListSync.ts
frontend/src/components/TopBar/: TopBar.css  TopBar.tsx
frontend/src/pages/AddRecipe/: AddRecipe.css  AddRecipe.tsx
frontend/src/pages/Home/: Home.css  Home.tsx
frontend/src/pages/Recipes/: Recipes.css  Recipes.tsx
frontend/src/pages/ShoppingList/: ShoppingList.css  ShoppingList.tsx  useShoppingListSync.ts
models/: data_models.py  request_models.py  response_models.py
notion/: notion_utils.py
templates/: index.html
